fixtures/valid/27-v0.11-minimal/input.anatomy
anatomy_version = "0.11"
tagline = "minimal v0.11 fixture — only required fields"

[identity]
stack = "javascript"
form = "library"
domain = "demo"
function = "minimal"
fingerprint = "kh3ybxthmht0yvvskye2"

[generated]
at = 2026-05-13T12:00:00.000Z
by = "anatomy-cli@0.14.0"
model = "none"
schema = "https://anatomy.dev/spec/0.11/schema.json"
