fixtures/invalid/21-v0.5-bad-commit/input.anatomy
anatomy_version = "0.5"
tagline = "Bad commit field — uppercase hex."

[identity]
fingerprint = "a8fybpg4nh2b5vpw498v"

[identity.stack]
id = "rust"
hash = "a8fyb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "web-publishing"
hash = "2b5vp"

[identity.function]
id = "markdown-to-static-html"
hash = "w498v"

[generated]
at = 2026-05-06T12:00:00.000Z
commit = "ABCDEF0"
by = "anatomy-cli@0.5.0"
model = "none"
schema = "https://anatomy.dev/spec/0.5/schema.json"
